# TrafficMonitorPlugin_Battery

./: .gitignore  CMakeLists.txt  READM.md  README.md  build.bat
include/: BatteryPlugin.h  PluginInterface.h
scripts/: build.bat
src/: BatteryItem.cpp  BatteryItem.h  BatteryPlugin.cpp  BatteryPlugin.h  HttpClient.cpp  HttpClient.h  JsonParser.cpp  JsonParser.h  dllmain.cpp  pch.h
